<resources>

    <string name="action_settings">Settings</string>
    <string name="select_war">Please select the war</string>
    <string name="app_name">COC War Guidance</string>

    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Android Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">GCM: device successfully registered!</string>
    <string name="gcm_unregistered">GCM: device successfully unregistered!</string>
    <string name="gcm_message">GCM: you got a new message!</string>
    <string name="gcm_error">GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Google Server.</string>
    <string name="server_registered">Google Server: successfully added device!</string>
    <string name="server_unregistered">Google Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Google Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Google Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="sending_push_notification">Sending a pushnotification to (%1$s).</string>
    <string name="menu_setupGCM">Setup GCM</string>
    <string name="mainMenu_Stats">Stats</string>
    <string name="subMenu_warProgress">War Progress</string>
    <string name="subMenu_UsVsThem">Us VS Them</string>
    <string name="SubMenu_starsLeft">Stars Left</string>
    <string name="mainMenu_admin">Admin</string>
    <string name="subMenu_unlockPlayer">Unlock Attack</string>

</resources>
