<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <!--<item-->
    <!--android:id="@+id/action_settings"-->
    <!--android:orderInCategory="100"-->
    <!--android:showAsAction="ifRoom"-->
    <!--android:title="@string/action_settings"/>-->

    <item
        android:id="@+id/menuSetupGCM"
        android:title="@string/menu_setupGCM"/>
    <item
        android:id="@+id/menuStats"
        android:title="@string/mainMenu_Stats">
        <menu>
            <item
                android:id="@+id/submenu_usVsThem"
                android:title="@string/subMenu_UsVsThem"/>
            <item
                android:id="@+id/submenu_starsLeft"
                android:title="@string/SubMenu_starsLeft"/>
            <item
                android:id="@+id/submenu_warProgress"
                android:title="@string/subMenu_warProgress"/>
        </menu>
    </item>
    <item
        android:id="@+id/menuAdmin"
        android:title="@string/mainMenu_admin">
        <menu>
            <item
                android:id="@+id/submenu_unlockAttack"
                android:title="@string/subMenu_unlockPlayer"/>
        </menu>
    </item>

</menu>
